--- a/web/index.html
+++ b/web/index.html
@@ -45,15 +45,67 @@
       as="fetch"
       crossorigin="anonymous"
     />
-    <script>
+    <script type="module">
       import { initializeApp } from "https://www.gstatic.com/firebasejs/9.18.0/firebase-app.js";
       import { getAnalytics } from "https://www.gstatic.com/firebasejs/9.18.0/firebase-analytics.js";
       import { getMessaging } from "https://www.gstatic.com/firebasejs/9.18.0/firebase-messaging.js";
+
+      const firebaseConfig = {
+        apiKey: "AIzaSyCc2Wp7mme0uygYd1Wfsp6uiqolTjkkCE8",
+        authDomain: "sipmm-cdd60.firebaseapp.com",
+        projectId: "sipmm-cdd60",
+        storageBucket: "sipmm-cdd60.appspot.com",
+        messagingSenderId: "942407023125",
+        appId: "1:942407023125:web:780b1469fd9ad46e646c1c",
+        measurementId: "G-QQPNNVPN55",
+      };
+      // Initialize Firebase
+      const app = initializeApp(firebaseConfig);
+
     </script>
   </head>
   <body>
     <script>
+      window.flutterWebRenderer = "html";
+    </script>
+    <script>
+      // window.addEventListener("load", function (ev) {
+      //   // Download main.dart.js
+      //   _flutter.loader
+      //     .loadEntrypoint({
+      //       serviceWorker: {
+      //         serviceWorkerVersion: serviceWorkerVersion,
+      //       },
+      //     })
+      //     .then(function (engineInitializer) {
+      //       return engineInitializer.initializeEngine();
+      //     })
+      //     .then(function (appRunner) {
+      //       return appRunner.runApp();
+      //     });
+      // });
+
+      var serviceWorkerVersion = null;
+      var isProduction = false;
+      var scriptLoaded = false;
+      function loadMainDartJs() {
+        if (scriptLoaded) {
+          return;
+        }
+        scriptLoaded = true;
+        var scriptTag = document.createElement("script");
+        scriptTag.src = "main.dart.js";
+        scriptTag.type = "application/javascript";
+        document.body.append(scriptTag);
+      }
+      if ("serviceWorker" in navigator) {
+        window.addEventListener("flutter-first-frame", function () {
+          navigator.serviceWorker.register("flutter_service_worker.js");
+        });
+      }
+
       window.addEventListener("load", function (ev) {
+        loadMainDartJs();
         // Download main.dart.js
         _flutter.loader
           .loadEntrypoint({
