--- a/web/index.html
+++ b/web/index.html
@@ -61,10 +61,10 @@
       };
       // Initialize Firebase
       const app = initializeApp(firebaseConfig);
-
     </script>
   </head>
   <body>
+    <div id="loading"></div>
     <script>
       window.flutterWebRenderer = "html";
     </script>
@@ -85,40 +85,71 @@
       //     });
       // });
 
-      var serviceWorkerVersion = null;
-      var isProduction = false;
-      var scriptLoaded = false;
-      function loadMainDartJs() {
-        if (scriptLoaded) {
-          return;
-        }
-        scriptLoaded = true;
-        var scriptTag = document.createElement("script");
-        scriptTag.src = "main.dart.js";
-        scriptTag.type = "application/javascript";
-        document.body.append(scriptTag);
-      }
-      if ("serviceWorker" in navigator) {
-        window.addEventListener("flutter-first-frame", function () {
-          navigator.serviceWorker.register("flutter_service_worker.js");
-        });
-      }
+      // var serviceWorkerVersion = null;
+      // var isProduction = false;
+      // var scriptLoaded = false;
+      // function loadMainDartJs() {
+      //   if (scriptLoaded) {
+      //     return;
+      //   }
+      //   scriptLoaded = true;
+      //   var scriptTag = document.createElement("script");
+      //   scriptTag.src = "main.dart.js";
+      //   scriptTag.type = "application/javascript";
+      //   document.body.append(scriptTag);
+      // }
+      // if ("serviceWorker" in navigator) {
+      //   window.addEventListener("flutter-first-frame", function () {
+      //     navigator.serviceWorker.register("flutter_service_worker.js");
+      //   });
+      // }
+
+      // window.addEventListener("load", function (ev) {
+      //   loadMainDartJs();
+      //   // Download main.dart.js
+      //   _flutter.loader
+      //     .loadEntrypoint({
+      //       serviceWorker: {
+      //         serviceWorkerVersion: serviceWorkerVersion,
+      //       },
+      //     })
+      //     .then(function (engineInitializer) {
+      //       return engineInitializer.initializeEngine();
+      //     })
+      //     .then(function (appRunner) {
+      //       return appRunner.runApp();
+      //     });
+      // });
+      // window.addEventListener("load", function (ev) {
+      //   // Download main.dart.js
+      //   _flutter.loader.loadEntrypoint({
+      //     serviceWorker: {
+      //       serviceWorkerVersion: serviceWorkerVersion,
+      //     },
+      //     onEntrypointLoaded: async function (engineInitializer) {
+      //       // Initialize the Flutter engine
+      //       let appRunner = await engineInitializer.initializeEngine();
+      //       // Run the app
+      //       await appRunner.runApp();
+      //     },
+      //   });
+      // });
 
       window.addEventListener("load", function (ev) {
-        loadMainDartJs();
-        // Download main.dart.js
-        _flutter.loader
-          .loadEntrypoint({
-            serviceWorker: {
-              serviceWorkerVersion: serviceWorkerVersion,
-            },
-          })
-          .then(function (engineInitializer) {
-            return engineInitializer.initializeEngine();
-          })
-          .then(function (appRunner) {
-            return appRunner.runApp();
-          });
+        var loading = document.querySelector("#loading");
+        loading.textContent = "Loading entrypoint...";
+        _flutter.loader.loadEntrypoint({
+          serviceWorker: {
+            serviceWorkerVersion: serviceWorkerVersion,
+          },
+          onEntrypointLoaded: async function (engineInitializer) {
+            loading.textContent = "Initializing engine...";
+            let appRunner = await engineInitializer.initializeEngine();
+
+            loading.textContent = "Running app...";
+            await appRunner.runApp();
+          },
+        });
       });
     </script>
   </body>
