--- a/web/index.html
+++ b/web/index.html
@@ -31,7 +31,27 @@
 
     <title>SIPMM</title>
     <link rel="manifest" href="manifest.json" />
+    <!-- CSS -->
+    <style>
+      * {
+        box-sizing: border-box;
+      }
 
+      *::before,
+      *::after {
+        box-sizing: border-box;
+      }
+
+      body {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin: 0;
+        min-height: 100vh;
+        background: #fff;
+        overflow: hidden;
+      }
+    </style>
     <script>
       // The value below is injected by flutter build, do not touch.
       var serviceWorkerVersion = null;
